--- a/src/assets/i18n/zh.json
+++ b/src/assets/i18n/zh.json
@@ -20,10 +20,10 @@
   "TUTORIAL_SLIDE1_TITLE": "欢迎来到币知道！",
   "TUTORIAL_SLIDE1_DESCRIPTION": "<b>币知道</b>是一款主打加密货币交易平台公告的实时提醒软件",
 
-  "TUTORIAL_SLIDE2_TITLE": "10多家主流交易所公告信息，30秒内通知提醒",
+  "TUTORIAL_SLIDE2_TITLE": "10多家主流交易所公告信息，自由选择推送目标",
   "TUTORIAL_SLIDE2_DESCRIPTION": "最新的新闻资讯，24小时实时更新",
 
-  "TUTORIAL_SLIDE3_TITLE": "主流币种价格闹钟，让你不再错过",
+  "TUTORIAL_SLIDE3_TITLE": "交易所公告24小时监控，30秒内铃声通知",
   "TUTORIAL_SLIDE3_DESCRIPTION": "实时价格查看，手机价格提示更便捷！",
 
   "TUTORIAL_SLIDE4_TITLE": "准备好体验了吗？",
